# mfd-model

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
.github/workflows/: main.yml  manual_release.yml  pull_request.yml  pull_requests.yml  run_tests.yml
examples/: simple_example.py
sphinx-doc/: Makefile  README.md  conf.py  generate_docs.py  index.rst
tests/: __init__.py
tests/unit/test_mfd_model/: __init__.py
tests/unit/test_mfd_model/_test_artifacts_manager/: _test_models.py
tests/unit/test_mfd_model/_test_nvm/: __init__.py  _test_models.py
