[build-system]
requires = [
    "setuptools>=80.4.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project]
name = "mfd-model"
description = "Module for handling models used across multiple MFDs (mostly Pydantic)"
requires-python = ">=3.10, <3.14"
version = "0.8.0"
dynamic = ["dependencies"]
license-files = ["LICENSE.md", "AUTHORS.md"]
readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
Homepage = "https://github.com/intel/mfd"
Repository = "https://github.com/intel/mfd-model"
Issues = "https://github.com/intel/mfd-model/issues"
Changelog = "https://github.com/intel/mfd-model/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
exclude = ["examples", "tests*", "sphinx-doc"]

[project.optional-dependencies]
artifacts_manager = ["pydantic >= 2.0, < 3", "mfd-const >= 0.23.0"]
config = ["pydantic >= 2.0, < 3", "mfd-typing >= 1.23.0"]
nvm = ["pydantic >= 2.0, < 3"]